<resources>
    <string name="app_name">Zoobiedo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_notification">Notification</string>
    <string name="menu_action_chagnePWD">Change Password</string>
    <string name="menu_action_notification">Notifications</string>
    <string name="menu_action_home">Home</string>
    <string name="menu_action_orderHis">Order History</string>
    <string name="menu_action_whatelse">What else?</string>
    <string name="menu_action_help">Feedback</string>
    <string name="menu_action_about">About Us</string>
    <string name="menu_action_logout">Logout</string>
    <string name="menu_action_edit_prof">Edit Profile</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <!--LOGIN-->
    <string name="hint_name">Full Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_register">Register</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="text_sign_In">Sign In</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_mobile">Enter mobile number</string>
    <string name="err_msg_lastName">Enter your last name</string>
    <string name="err_msg_mobile_numberLimit">Mobile number should be 10 digits</string>

    <string name="facebook_app_id">1648912805419197</string>

    <string name="selected_price_text">You have selected 1 slot :</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Intent Extras -->
    <string name="extras_forgetPwd">ForgetPwd</string>
    <string name="extras_user_details">UserDetails</string>
    <string name="extras_user_normal">NormalUser</string>
    <string name="extras_user_normal_data">NormalUserData</string>
    <string name="extras_user_social">NormalSocial</string>
    <string name="extras_user_social_data">NormalSocialData</string>
    <string name="extras_matchtype_cricket">Cricket</string>
    <string name="extras_matchtype_bad">Batminton</string>
    <string name="extras_menu_editprof">Edit Profile</string>
    <string name="extras_menu_history">orderhistory</string>
    <string name="extras_menu_feedback">Feedback</string>
    <string name="extras_menu_settings">Settings</string>
    <string name="extras_menu_logout">Logout</string>
    <string name="extras_menu_home">Home</string>
    <string name="extras_menu_help">Help</string>
    <string name="extras_menu_aboutUs">About Us</string>
    <string name="extras_menu_changepwd">Change Password</string>
    <string name="extras_slots">slots</string>
    <string name="extras_sub_facility_id">facilityId</string>
    <string name="extras_req_data">facilitiesData</string>
</resources>
